# sentry-docs-plugin

./: Makefile
sentry-docs-language-server/: Cargo.toml
sentry-docs-language-server/src/: main.rs
vscode/: .vscodeignore  package-lock.json  package.json  sentry-docs-plugin-0.1.0.vsix
vscode/src/: extension.ts
