[package]
name = "sentry-docs-language-server"
version = "0.1.0"
edition = "2024"

[dependencies]
html_parser = "0.7.0"
parking_lot = "0.12.3"
roxmltree = "0.20.0"
sentry = "0.36.0"
sentry-tracing = "0.36.0"
tokio = { version = "1.44.1", features = ["full"] }
tower-lsp-server = { git = "https://github.com/tower-lsp-community/tower-lsp-server.git", branch = "main" }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
xmlparser = "0.13.6"
